# staywalk

./: .gitignore  CMakeLists.txt  readme.md
resource/objects/: 0-mesh.swmesh  827046444560023552.swobj  827046445885423616.swobj  827046445885423617.swobj  827046445898006528.swobj  827046445898006529.swobj  827046445898006530.swobj  827046445898006531.swobj  827046445906395136.swobj  827046445906395137.swobj  827046445918978048.swobj  827046445918978049.swobj  827046445927366656.swobj  827046445927366657.swobj  827046445931560960.swobj  827046445931560961.swobj  827046445931560962.swobj  827046445931560963.swobj  827046445931560964.swobj  827046445931560965.swobj  827046445931560966.swobj  827046445931560967.swobj  827046445935755264.swobj  827046445935755265.swobj  827046445948338176.swobj  827046445948338177.swobj  827046445952532480.swobj  827046445952532481.swobj  827046445952532482.swobj  827046445952532483.swobj  827046445952532484.swobj  827046445952532485.swobj  827046445952532486.swobj  827046445952532487.swobj  827046445956726784.swobj  827046445956726785.swobj  827046445956726786.swobj  827046445956726787.swobj  827046445956726788.swobj  827046445956726789.swobj  (+132 more)
resource/script/: actor_test.py  camera_look.py  create_camera.py  create_terrain.py  indices_test.py  input.py  new_world.py  triangle_test.py
resource/shaders/: deferred_pbr.vs  depth.vs  pbr.fs  pbr.vs  program-0.vs  skybox.fs  skybox.vs  terrain.fs  terrain.vs
resource/shaders/common/: deferred_common.fs  deferred_common.vs  deferred_shading_common.fs
resource/shaders/cs/: bloom.cs  bloom_h.cs  bloom_v.cs  hdr.cs  tone_mapping.cs
resource/shaders/deferred/: hdr.fs  hdr.vs  pbr.fs  pbr.vs  pbrpost.fs  pbrpost.vs  terrain.fs  terrain.vs
resource/shaders/dev_tool/: compiler_test.py
resource/shaders/forward/: depth.fs  depth.vs  pbrpost.fs  pbrpost.vs  skybox.fs  skybox.vs
resource/worlds/: marry-world.sworld  rock-world.sworld  test-world.sworld
src/editor/: AssetBrowser.cpp  AssetBrowser.h  EditorUI.cpp  EditorUI.h  PopInput.cpp  PopInput.h  TextEditor.cpp  TextEditor.h
src/engine/: Actor.cpp  Actor.h  Animation.cpp  Animation.h  Camera.cpp  Camera.h  Common.h  Component.cpp  Component.h  Console.cpp  Console.h  DeferredRenderer.cpp  DeferredRenderer.h  DepthRenderTarget.cpp  DepthRenderTarget.h  EditorCommon.cpp  EditorCommon.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Event.cpp  Event.h  FileMonitor.cpp  FileMonitor.h  GameComponent.cpp  GameComponent.h  GameObject.cpp  GameObject.h  Input.cpp  Input.h  InputManager.cpp  InputManager.h  Light.cpp  Light.h  Logger.cpp  Logger.h  Material.cpp  Material.h  Object.cpp  (+37 more)
src/parser/: log.txt  parse.py  startup.py  test.cpp
src/parser/script/: clang-t.py  collector.py  common.py  common_generate.py  mylog.py  parse.py  parse_class.py  py_bind_generate.py  serialize_generate.py  startup.py  test.cpp  test2.cpp  test3.cpp  ui_generate.py
src/project/: SkyBox.cpp  SkyBox.h
src/reflect/: Common.gen.h  ConstructUI.cpp  ConstructUI.h  MetaInfo.h  Script.cpp  Script.h  Serialize.cpp  Serialize.h  SerializeAll.gen.h  SerializerAll.gen.h  UIBind.h  UIBindAll.gen.h  reflect.h
src/script/: PyEnv.cpp  PyEnv.h
